--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ body{
     0% {transform:translateY(0px);}
     80%{ width:60px;
          height:60px}
-    90%{height:0%;  
+    95%{height:0%;  
         width:0%}
     100% {transform:translateY(535px);
         height:0%;  
@@ -146,7 +146,7 @@ button {
 #score {
     font-size:300%; 
     position:relative;
-    z-index:999; 
+    z-index: 3; 
     pointer-events:none;
 }
 .informations{
@@ -190,3 +190,36 @@ p{
     font-weight: bold;
     color: rgb(209, 47, 101);
 }
+#sphere {
+    border: 2px solid rgb(100, 34, 75);
+    border-radius: 20px;
+    box-sizing: border-box;
+    font-size: 60px;
+    color: rgb(71, 36, 75);
+    height: 80px;
+    margin: auto;
+    margin-top: 20px;
+    position: relative;
+    text-align: center;
+    width: 230px;
+}
+.number {
+    display: inline-block;
+    width: 40px;
+}
+.number.mill {
+  width:30px;
+  font-weight: lighter;
+  font-size: smaller;
+}
+/* .btn {
+    border: 0;
+    border-radius: 100%;
+    bottom: 10px;
+    color: #fff;
+    cursor: pointer;
+    height: 50px;
+    outline: 0;
+    position: absolute;
+    width: 50px;
+  } */
